@startuml

class Cadena {
    - String nombre
    - ArrayList<Programa> listaProgramas
    + Cadena(String nombre)
    + void agregarPrograma(Programa programa)
    + ArrayList<Programa> getListaProgramas()
    + String getNombre()
    + void setNombre(String nombre)
    + void setListaProgramas(ArrayList<Programa> listaProgramas)
    + String toString()
}

class Programa {
    - String nombre
    - Cadena cadena
    - int temporadas
    - ArrayList<Empleado> listaEmpleados
    - ArrayList<Invitado> listaInvitados
    - Empleado director
    + Programa(String nombre, Cadena cadena, String director)
    + void insertarEmpleado(String nombre, String cargo, Empleado director)
    + void insertarInvitado(String nombre, String profesion, int temporada)
    + boolean buscarInvitado(String nombre)
    + void invitadoAntes(String nombre)
    + int vecesInvitado(String nombre)
    + void rastrearInvitado(String nombre)
    + void invitadosTemporada(int temporada)
    + ArrayList<Empleado> getListaEmpleados()
    + ArrayList<Invitado> getListaInvitados()
    + void setListaEmpleados(ArrayList<Empleado> listaEmpleados)
    + void setListaInvitados(ArrayList<Invitado> listaInvitados)
    + String getNombre()
    + void setNombre(String nombre)
    + String toString()
}

class Empleado {
    - static final String ID_EMPLEADO
    - static int cantidadEmpleados
    - final String id
    - String nombre
    - String cargo
    - Empleado director
    + Empleado(String nombre, String cargo, Empleado director)
    + String getNombre()
    + void setNombre(String nombre)
    + String getId()
    + String getCargo()
    + void setCargo(String cargo)
    + Empleado getDirector()
    + void setDirector(Empleado director)
    + int getCantidadEmpleados()
    + String toString()
}

class Invitado {
    - static final Scanner teclado
    - String nombre
    - String profesion
    - LocalDate fechaVisita
    - int temporada
    + Invitado(String nombre, String profesion, int temporada)
    + String getNombre()
    + void setNombre(String nombre)
    + String getProfesion()
    + void setProfesion(String profesion)
    + LocalDate getFechaVisita()
    + void setFechaVisita()
    + int getTemporada()
    + void setTemporada(int temporada)
    + String toString()
}

Cadena "1 " o-- "0..* " Programa : contiene
Programa "1   " *-- "0..* " Empleado : trabaja
Programa "1 " *-- "1" Empleado : dirige
Programa "1" *-- "0..*    " Invitado : recibe
Empleado " 0..1" --> "   0..1" Empleado : supervisa // Reflexión

@enduml